Fix about text-align issue

--- a/css/main.css
+++ b/css/main.css
@@ -50,3 +50,7 @@ header {
   flex-direction: row;
   justify-content: space-around;
 }
+
+.about-content {
+  text-align: center;
+}
